Fix aspect-ratio-intrinsic-size-004.html https://bugs.webkit.org/show_bug.cgi?id=228283

Patch by Rob Buis <rbuis@igalia.com> on 2021-09-10
Reviewed by Sergio Villar Senin.

Source/WebCore:

Flex items using aspect-ratio that are stretched
and depend on flex container height also need
to have the preferred widths recalculated.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::needsPreferredWidthsRecalculation const):

LayoutTests:

* TestExpectations:

Canonical link: https://commits.webkit.org/241542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282264 268f45cc-cd09-0410-ab3c-d52691b4dbfc